fix: update nav z-index

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -1,6 +1,7 @@
 .notion {
 	max-width: 72rem;
 	margin: 12px auto;
+	padding: 0 2rem;
 	font-size: 16px;
 	line-height: 1.5;
 	color: theme(colors.gray.900);
